gnome-shell (3.29.90-1) UNRELEASED; urgency=medium

  * New upstream release 3.29.90
  * Rebase patch series
  * d/p/Revert-Explicitly-convert-raw-data-to-strings.patch:
    Revert porting to mozjs60/gjs 1.53.90. Debian only has mozjs52 at
    the moment (see #904991).

 -- Simon McVittie <smcv@debian.org>  Wed, 01 Aug 2018 08:49:37 +0100

gnome-shell (3.29.4-1) experimental; urgency=medium

  * debian/*: Update for experimental (3.29/3.30 series)
  * New upstream release 3.29.4 (etc)
    + Fix "Clear All" for calendar events
    + Allow cancelling direct switch operations
    + Support being started by systemd --user
    + Support key event forwarding required by some input methods
    + Save creation time in screenshot metadata
    + Improve consistency between ctrl- and middle-click on app icons
    + Add support for font-feature-settings CSS property
    + Adjust to MetaScreen removal
    + Guard against untimely keyboard map changes
    + Fix icons in search provider results
    + Fix blurriness of OSD under some resolutions
    + Fix lagging pointer when zoomed
    + Support icons in app-menu
  * Install new systemd user units (aren't used by anything just yet)
  * Refresh patches
  * debian/gnome-shell.docs: README is now called README.md
  * debian/control*: Require mutter API version 3 and mutter 3.29.4

 -- Iain Lane <laney@debian.org>  Wed, 25 Jul 2018 17:40:58 +0100

gnome-shell (3.28.3-1) unstable; urgency=medium

  * New upstream release (LP: #1718931)
    d/p/Change-const-to-var.patch,
    d/p/Update-Afrikaans-translation.patch,
    d/p/Update-Scottish-Gaelic-translation.patch,
    d/p/magnifier.js-Fix-zoom-juddering.patch,
    d/p/network-Update-the-icon-in-the-panel-whenever-NM-s-state-.patch,
    d/p/networkAgent-Fix-fallout-from-libnm-port.patch,
    d/p/st-label-Unset-clutter-text-instance-on-disposal.patch,
    d/p/st-texture-cache-Don-t-add-NULL-textures-to-cache.patch,
    d/p/st-texture-cache-Save-cairo-surfaces-to-a-different-map.patch,