@@ -26,7 +26,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.21.6),
                libibus-1.0-dev,
-               libmutter-3-dev (>= 3.29.4),
+               libmutter-3-dev (>= 3.29.90),
                libnm-dev (>= 1.10.4) [linux-any],
                libpolkit-agent-1-dev (>= 0.100),
                libpulse-dev (>= 2.0),
@@ -73,7 +73,7 @@ Depends: ${gir:Depends},
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0 (>= 3.25.91),
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-3 (>= 3.29.0),
+         gir1.2-mutter-3 (>= 3.29.90),
          gir1.2-nm-1.0 [linux-any],
          gir1.2-nma-1.0 [linux-any],
          gir1.2-pango-1.0,
@@ -86,7 +86,7 @@ Depends: ${gir:Depends},
          gnome-shell-common (= ${source:Version}),
          gnome-backgrounds (>= 3.13.90),
          gsettings-desktop-schemas (>= 3.21.3),
-         mutter (>= 3.29.4),
+         mutter (>= 3.29.90),
          python3,
          libglib2.0-bin (>= 2.53.0),
 Recommends: bolt (>= 0.3),
